core: Remove permanent generation options
The permanent generation has been removed in Java 8, thus the "PermSize"
and "MaxPermSize" options don't have any meaning.

Change-Id: Ic41c25e15d438d40a93f8db04c2d44a5b35c92ef
Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>